# WeatherWard

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/plans/: weatherward.plan.md
src/weatherward/: __init__.py  __main__.py  cli.py  config.py
src/weatherward/agent/: chat.py  tools.py
src/weatherward/chains/: analyzer.py  indexer.py  reviewer.py  stylist.py
src/weatherward/mcp/: server.py
src/weatherward/models/: __init__.py
src/weatherward/services/: index.py  llm.py  wardrobe.py  weather.py
tests/: test_chains.py  test_cli.py  test_config.py  test_mcp.py  test_wardrobe.py  test_weather.py
