[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weatherward"
version = "0.1.0"
description = "智能衣服搭配助手 - 根据天气和衣橱推荐穿搭"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "WeatherWard Team" },
]

dependencies = [
    # LangChain 核心
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # MiMo 支持（通过 OpenAI 兼容）
    "openai>=1.50.0",
    # MCP Server
    "mcp>=1.0.0",
    # HTTP 客户端
    "httpx>=0.27.0",
    # 图片处理
    "Pillow>=10.0.0",
    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",
    # 配置管理
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
weatherward = "weatherward.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weatherward"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.coverage.run]
source = ["weatherward"]

[tool.coverage.report]
fail_under = 80
